--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("tekM38P-champions-league-wallpaper.jpg");
+    background-image: url("championsleague.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
@@ -32,4 +32,10 @@ h1 {
     margin-top: 20px;
 }
 
+#quizSection {
+    display: none;
+}
 
+#answerBox {
+    display: none;
+}
