--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("championsleague.jpg");
+    background-image: url("CLbackground.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
@@ -25,6 +25,13 @@ h1 {
     margin-top: 20px;
 }
 
+.bottomBanner {
+    text-align: center;
+}
+
+.bottomBanner h3 {
+    display: inline-block;    
+}
 .startButton {
     display: block;
     margin: 0 auto;
@@ -49,6 +56,10 @@ h1 {
 
 #quizForm fieldset {
     border: 0px;
+}
+
+#quizForm ul {
+    list-style-type: none;
 }
 
 #js-submit-button {
